--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <button onclick="startTargetTracking()">Target Tracking Demo</button>
         <button onclick="startHandTracking()">Hand Tracking Demo</button>
         <button onclick="startMarkerTracking()">Marker Tracking Demo</button>
+        <button onclick="startFaceTracking()">Face Tracking Demo</button>
     </div>
 
     <script>
@@ -43,13 +44,16 @@
         }
 
         function startHandTracking() {
-            // Implement hand tracking demo
-            alert("Hand Tracking Demo - Not implemented yet");
+            window.location.href = 'handtrackingdemo.html';
         }
 
         function startMarkerTracking() {
             // Implement marker tracking demo using AR.js
             alert("Marker Tracking Demo - Not implemented yet");
+        }
+
+        function startFaceTracking() {
+            window.location.href = 'facetrackingdemo.html';
         }
     </script>
 </body>
