--- a/index.html
+++ b/index.html
@@ -4,58 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR Demo Selection</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-face.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/dist/mindar-face-aframe.prod.js"></script>
-   <style>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
+            min-height: 100vh;
+            color: #ffffff;
         }
         .container {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            padding: 40px;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
             text-align: center;
         }
-        button {
-            padding: 10px 20px;
-            font-size: 18px;
-            margin: 10px;
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 30px;
+            font-weight: 700;
+        }
+        .demo-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .demo-button {
+            background: rgba(255, 255, 255, 0.2);
+            border: none;
+            padding: 15px 20px;
+            border-radius: 10px;
+            color: #ffffff;
+            font-size: 1em;
             cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .demo-button:hover {
+            background: rgba(255, 255, 255, 0.3);
+            transform: translateY(-5px);
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>AR Demo Selection</h1>
-        <button onclick="startTargetTracking()">Target Tracking Demo</button>
-        <button onclick="startHandTracking()">Hand Tracking Demo</button>
-        <button onclick="startMarkerTracking()">Marker Tracking Demo</button>
-        <button onclick="startFaceTracking()">Face Tracking Demo</button>
+        <p>Experience the future of Augmented Reality with our interactive demos.</p>
+        <div class="demo-grid">
+            <button class="demo-button" onclick="startTargetTracking()">Target Tracking Demo</button>
+            <button class="demo-button" onclick="startFaceTracking()">Face Tracking Demo</button>
+            <button class="demo-button" onclick="startHandTracking()">Hand Tracking Demo</button>
+        </div>
     </div>
 
     <script>
         function startTargetTracking() {
             window.location.href = 'targettrackingdemo.html';
         }
-
-        function startHandTracking() {
-            window.location.href = 'handtrackingdemo.html';
-        }
-
-        function startMarkerTracking() {
-            // Implement marker tracking demo using AR.js
-            alert("Marker Tracking Demo - Not implemented yet");
-        }
-
         function startFaceTracking() {
             window.location.href = 'facetrackingdemo.html';
+        }
+        function startHandTracking() {
+            window.location.href = 'handtrackingdemo.html';
         }
     </script>
 </body>
