--- a/handtrackingdemo.html
+++ b/handtrackingdemo.html
@@ -1,59 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="https://unpkg.com/handtrackjs/dist/handtrack.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hand Tracking Demo</title>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
 </head>
-<body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <a-marker preset="hiro">
-            <a-box position="0 0.5 0" material="color: red;"></a-box>
-        </a-marker>
-        <a-entity camera></a-entity>
-    </a-scene>
-
-    <div id="handInfo" style="position: absolute; top: 10px; left: 10px; color: white; font-family: Arial; font-size: 16px;">
-        Hand not detected
+<body>
+    <div class="container">
+        <video class="input_video" style="display: none;"></video>
+        <canvas class="output_canvas" width="640" height="480"></canvas>
     </div>
 
     <script>
-        const video = document.querySelector('video');
-        const handInfo = document.getElementById('handInfo');
+    const videoElement = document.getElementsByClassName('input_video')[0];
+    const canvasElement = document.getElementsByClassName('output_canvas')[0];
+    const canvasCtx = canvasElement.getContext('2d');
 
-        const modelParams = {
-            flipHorizontal: true,
-            maxNumBoxes: 1,
-            iouThreshold: 0.5,
-            scoreThreshold: 0.6 // Try lowering this value
-        };
-
-        let model;
-
-        handTrack.load(modelParams).then(lmodel => {
-            model = lmodel;
-            startDetection();
-        });
-
-        function startDetection() {
-            handTrack.startVideo(video).then(status => {
-                if (status) {
-                    detectHand();
-                }
-            });
+    function onResults(results) {
+        canvasCtx.save();
+        canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
+        canvasCtx.drawImage(results.image, 0, 0, canvasElement.width, canvasElement.height);
+        if (results.multiHandLandmarks) {
+            for (const landmarks of results.multiHandLandmarks) {
+                drawConnectors(canvasCtx, landmarks, HAND_CONNECTIONS,
+                               {color: '#00FF00', lineWidth: 5});
+                drawLandmarks(canvasCtx, landmarks, {color: '#FF0000', lineWidth: 2});
+            }
         }
+        canvasCtx.restore();
+    }
 
-        function detectHand() {
-            model.detect(video).then(predictions => {
-                if (predictions.length > 0) {
-                    handInfo.textContent = `Hand detected at: X=${predictions[0].bbox[0]}, Y=${predictions[0].bbox[1]}`;
-                } else {
-                    handInfo.textContent = 'Hand not detected';
-                }
-                requestAnimationFrame(detectHand);
-            });
-        }
+    const hands = new Hands({locateFile: (file) => {
+        return `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`;
+    }});
+    hands.setOptions({
+        maxNumHands: 2,
+        modelComplexity: 1,
+        minDetectionConfidence: 0.5,
+        minTrackingConfidence: 0.5
+    });
+    hands.onResults(onResults);
+
+    const camera = new Camera(videoElement, {
+        onFrame: async () => {
+            await hands.send({image: videoElement});
+        },
+        width: 640,
+        height: 480
+    });
+    camera.start();
     </script>
 </body>
 </html>
