--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <p>Interact with AR using hand gestures.</p>
                 <button class="demo-button" onclick="startDemo('hand')">Start Demo</button>
             </div>
+            <div class="demo-card">
+                <h2>Create Your Own AR</h2>
+                <p>Design a custom AR experience.</p>
+                <button class="demo-button" onclick="createARExperience()">Create AR Experience</button>
+            </div>
         </div>
     </div>
     
